# chronospay

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  index.html
.github/workflows/: ci.yml  deploy.yml
assets/: index-CUT9B-GO.js  index-DRNvXWEr.css  index-DpMRcTh7.js
backend/: Dockerfile  package-lock.json  package.json
backend/migrations/: 001_initial_schema.js
backend/src/: app.js  app.test.js  db.js  index.js
backend/src/controllers/: adminController.js  authController.js  escrowController.js  jobController.js  paymentController.js  proposalController.js  streamController.js  supportController.js  walletController.js
backend/src/middleware/: admin.js  auth.js  issuer.js
backend/src/routes/: auth.js  jobs.js  payments.js  streams.js  vaccination.js  verify.js  wallet.js
backend/src/services/: stellar.js
contracts/: Cargo.toml  Makefile  README.md  deploy.sh
contracts/escrow/: Cargo.toml  README.md
contracts/escrow/src/: lib.rs
contracts/src/: events.rs  lib.rs  mint.rs  storage.rs  verify.rs
database/: schema.sql
docs/: api-reference.md  architecture.mmd  configuration.md  roadmap.md  secret-scanning-setup.md  security-headers.md  setup-guide.md  staging-environment.md  troubleshooting.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
python-service/: Dockerfile  main.py  requirements.txt  test_main.py
python-service/routes/: analytics.py  batch.py
scripts/: setup-git-hooks.ps1  setup-git-hooks.sh
(+28 files in other folders)
